--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-emoji": "^1.3.2-canary.2",
+    "cz-gitmoji-adapter": "^2.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -76,7 +78,40 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-gitmoji-adapter",
+      "useEmoji": true
+    },
+    "cz-gitmoji-adapter": {
+      "scopes": [
+        "models",
+        "accounts",
+        "app",
+        "auth",
+        "authorization",
+        "clients",
+        "cnae",
+        "common",
+        "utils",
+        "health",
+        "layers",
+        "modules",
+        "places",
+        "products",
+        "api",
+        "ci/cd",
+        "infrastructure",
+        "deployment",
+        "backup",
+        "recovery",
+        "release",
+        "init",
+        "runner",
+        "watcher",
+        "config"
+      ],
+      "questions": {
+        "scope": "Specify a scope: "
+      }
     }
   },
   "packageManager": "yarn@4.3.1+sha512.af78262d7d125afbfeed740602ace8c5e4405cd7f4735c08feb327286b2fdb2390fbca01589bfd1f50b1240548b74806767f5a063c94b67e431aabd0d86f7774"
