--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "migration:create": "npm run typeorm -- -d ./src/config/typeorm.ts migration:create",
     "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.ts migration:revert",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
